product create handler
